update calcualted fields upon load

--- a/euro_aip/web/client/index.html
+++ b/euro_aip/web/client/index.html
@@ -109,7 +109,7 @@
                 <h1 class="text-center">
                     <i class="fas fa-plane"></i> Euro AIP Airport Explorer
                 </h1>
-                <p class="text-center text-muted">Interactive map of European airports with AIP data and procedures</p>
+                <p class="text-center text-muted">Interactive map of European airports with AIP data and procedures (France by default)</p>
             </div>
         </div>
 
