filter apply directly

--- a/euro_aip/web/client/index.html
+++ b/euro_aip/web/client/index.html
@@ -424,8 +424,8 @@
                         <div class="col-md-1">
                             <label class="form-label">&nbsp;</label>
                             <div class="d-flex flex-column gap-1">
-                                <button class="btn btn-primary btn-sm" id="apply-filters" title="Apply Filters">
-                                    <i class="fas fa-search"></i>
+                                <button class="btn btn-outline-primary btn-sm" id="apply-filters" title="Apply Filters (Auto-applies on change)">
+                                    <i class="fas fa-search"></i> Apply
                                 </button>
                                 <button class="btn btn-outline-secondary btn-sm" id="reset-zoom" 
                                         title="Reset Zoom (Ctrl+R)">
@@ -521,10 +521,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- Application Scripts -->
-    <script src="js/api.js?v=2.2"></script>
-    <script src="js/map.js?v=2.2"></script>
-    <script src="js/filters.js?v=2.2"></script>
-    <script src="js/charts.js?v=2.2"></script>
-    <script src="js/app.js?v=2.2"></script>
+    <script src="js/api.js?v=2.4"></script>
+    <script src="js/map.js?v=2.4"></script>
+    <script src="js/filters.js?v=2.4"></script>
+    <script src="js/charts.js?v=2.4"></script>
+    <script src="js/app.js?v=2.4"></script>
 </body>
 </html> 
