check point to add url config for web app

--- a/euro_aip/web/client/index.html
+++ b/euro_aip/web/client/index.html
@@ -324,6 +324,9 @@
             <div class="col-12">
                 <h2 class="text-center mb-1">
                     <i class="fas fa-plane"></i> Euro AIP Airport Explorer
+                    <button class="btn btn-outline-primary btn-sm ms-2" id="share-button" title="Copy shareable URL">
+                        <i class="fas fa-share-alt"></i> Share
+                    </button>
                 </h2>
                 <p class="text-center text-muted mb-2">Interactive map of European airports with AIP data and procedures (Border Crossing airports by default)</p>
             </div>
